--- a/_mode_/template/kingstatic.html
+++ b/_mode_/template/kingstatic.html
@@ -13,10 +13,10 @@
 	<div class="u-head fn-clear">
 		<div class="logo"><span>Static Server</span></div>
 		<ul class="nav fn-clear fn-mt20">
-			<li class="{$curIndex}"><a href="index.html">底层</a></li>
-			<li class="{$curStyle}"><a href="style.html">样式库</a></li>
-			<li class="{$curModule}"><a href="module.html">组件</a></li>
-			<li class="{$curPng}"><a href="png.html">公用图片</a></li>
+			<li class="{$curIndex}"><a href="/kingstatic/index.html">底层</a></li>
+			<li class="{$curStyle}"><a href="/kingstatic/style.html">样式库</a></li>
+			<li class="{$curModule}"><a href="/kingstatic/module.html">组件</a></li>
+			<li class="{$curPng}"><a href="/kingstatic/png.html">公用图片</a></li>
 		</ul>
 	</div>
 </div>
