--- a/static/css/king/common.css
+++ b/static/css/king/common.css
@@ -115,6 +115,7 @@ html{color:#282828;background:#eaeaea;}
 	color: #666;
 }
 .u-main .code xmp{
+	width: 200px;
 	margin: 0;
 	font-family: "Courier New", Courier, monospace;
 }
