--- a/static/css/kingstatic/module.css
+++ b/static/css/kingstatic/module.css
@@ -4,7 +4,7 @@
 	margin-right: 4px;
 	padding: 4px 0;
 	font-size: 14px;
-	color: #bbb;
+	color: #888;
 	font-family: "Microsoft YaHei";
 }
 .u-module a{
