--- a/demo/iptv/static/css/common.css
+++ b/demo/iptv/static/css/common.css
@@ -5,6 +5,9 @@ html, body{
 .u-head{
 	height: 70px;
 	background: url(../img/head.jpg) no-repeat left top;
+	text-align: right;
+	font-size: 18px;
+	color: #fff;
 }
 .u-nav{
 	height: 34px;
@@ -62,6 +65,54 @@ html, body{
 	overflow: hidden;
 	background: url(../img/tv.jpg) no-repeat left top;
 }
+.u-main .newslist{
+	height: 264px;
+	padding: 35px 9px 0;
+	font-size: 14px;
+	font-family: "Microsoft YaHei";
+}
+.u-main .newslist p{
+	height: 24px;
+	padding: 3px 0 0 8px;
+	border-bottom: solid 1px #155590;
+	overflow: hidden;
+}
+.u-main .newslist a{
+	display: block;
+	padding-left: 14px;
+	background: url(../img/round.png) no-repeat left 8px;
+	color: #fff;
+	text-decoration: none;
+}
+.u-main .bottommore{
+	width: 224px;
+	text-align: right;
+}
+.u-main .bottommore a{
+	display: inline-block;
+	width: 35px;
+	height: 18px;
+	overflow: hidden;
+	background: url(../img/more.gif) no-repeat left top;
+}
+.u-main .tvpic{
+	position: relative;
+	padding: 13px 0 0 14px;
+	width: 373px;
+	height: 292px;
+	overflow: hidden;
+}
+.u-main .tvpic img{
+	width: 100%;
+}
+.u-main .tvpic .play{
+	position: absolute;
+	width: 72px;
+	height: 72px;
+	top: 121px;
+	left: 169px;
+	background: url(../img/play.png) no-repeat left top;
+}
 
 .u-bottom{
 	margin: auto;
@@ -70,5 +121,17 @@ html, body{
 	overflow: hidden;
 	background: url(../img/bottom.jpg) no-repeat left top;
 }
-
-
+.u-bottom ul{
+	padding: 7px 0 0 20px;
+}
+.u-bottom li{
+	float: left;
+	margin-right: 16px;
+	width: 102px;
+	height: 65px;
+	border: solid 1px #8badcc;
+	overflow: hidden;
+}
+.u-bottom li img{
+	width: 100%;
+}
