--- a/demo/iptv/static/css/common.css
+++ b/demo/iptv/static/css/common.css
@@ -9,9 +9,19 @@ html, body{
 	height: 70px;
 	background: url(../img/head.jpg) no-repeat left top;
 	text-align: right;
-	font-size: 18px;
+	font-size: 14px;
 	color: #fff;
 }
+.u-head .marquee{
+	float: right;
+	margin-top: 36px;
+	width: 360px;
+	height: 27px;
+	padding-left: 13px;
+	line-height: 27px;
+	background: url(../img/marquee.png) no-repeat right top;
+}
+
 .u-nav{
 	height: 34px;
 	background: url(../img/nav_bg.gif) repeat-x center top;
