--- a/photo/index.css
+++ b/photo/index.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 html {
-	background: url(/common/bg.png) fixed repeat left top;
+	background-color: #f4f4f4;
 	color: #282828;
 }
 
