--- a/index/index.css
+++ b/index/index.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* @index */
 html{
-	background: url(/common/bg.png) fixed repeat left top;
+	background-color: #f4f4f4;
 	color: #282828;
 }
 
