--- a/menu/m.css
+++ b/menu/m.css
@@ -19,6 +19,11 @@ html {
 .u-nav a{
 	color: #333;
 }
+#kj-h1{}
+#kj-h2{
+	font-size: 12px;
+	color: #808080;
+}
 .u-nav .cart{
 	float: right;
 }
@@ -196,4 +201,41 @@ html {
 }
 .u-foot a:hover{
 	color: #ff9900;
+}
+
+/* kf-overlay */
+.kf-overlay{
+	background-color: #404040;
+}
+.kf-overlay-close{
+	position: absolute;
+	right: 10px;
+	top: 11px;
+	width: 10px;
+	height: 10px;
+	background: url(img/close.png) no-repeat left top;
+	overflow: hidden;
+}
+.kf-overlay-head{
+	display: block;
+	padding-left: 10px;
+	height: 32px;
+	line-height: 32px;
+	background-color: #404040;
+	color: #fff;
+	font-size: 14px;
+	font-family: "Microsoft YaHei";
+}
+.kf-overlay-body{
+	display: block;
+	padding: 0 6px 6px;
+	font-size: 14px;
+	font-family: "Courier New", Courier, monospace;
+}
+.kf-overlay-body .content{
+	padding: 10px;
+	line-height: 20px;
+	color: #202020;
+	background-color: #fff;
+	word-break: break-all;
 }
