--- a/trip/p.css
+++ b/trip/p.css
@@ -4,6 +4,10 @@ body{
 }
 /* @u-head */
 .u-head{
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
 	background-color: #f0f0f0;
 	border-bottom: solid 1px #e0e0e0;
 }
@@ -35,6 +39,15 @@ body{
 	line-height: 32px;
 	font-size: 16px;
 }
+.u-head .title em{
+	font-size: 12px;
+	color: #a0a0a0;
+	font-family: Verdana, Geneva, sans-serif;
+}
+.u-headtemp{
+	height: 53px;
+	overflow: hidden;
+}
 
 .kc-back .back{
 	display: block;
@@ -52,6 +65,16 @@ body{
 	font-size: 14px;
 	font-family: "Microsoft YaHei";
 	line-height: 26px;
+}
+.u-wrap .contain p{
+	text-indent: 2em;
+	margin-bottom: 16px;
+}
+.u-wrap .contain p.m0{
+	margin: 0;
+}
+.u-wrap .contain img.block{
+	display: block;
 }
 
 .u-foot{
