--- a/message/index.css
+++ b/message/index.css
@@ -1,5 +1,15 @@
 @charset "utf-8";
 /* @topic */
+.u-pub{
+	margin: auto;
+	width: 960px;
+	padding: 30px 0 20px;
+}
+.u-pub .btn{
+	float: right;
+	width: 136px;
+	cursor: pointer;
+}
 .u-message{
 	margin: auto;
 	width: 960px;
