--- a/index/index.css
+++ b/index/index.css
@@ -1,30 +1,11 @@
 @charset "utf-8";
 /* @index */
-html{
-	background-color: #f4f4f4;
-	color: #282828;
-}
-
-.u-site, .u-nav a{
-	behavior: url(/common/ie-css3.htc);
-}
-
-.u-site{
-	margin: 30px auto 0;
-	width: 200px;
-	height: 32px;
-	line-height: 32px;
-	background-color: #fff;
-	border: solid 1px #eee;
-	border-radius: 16px;
-	text-align: center;
-	font-size: 18px;
-	color: #999;
-	font-family: "Courier New", Courier, monospace;
-}
-
 .u-nav{
-	margin: 30px auto 0;
+	padding: 30px 0;
+	background-color: #fff;
+}
+.u-nav .wrap{
+	margin: auto;
 	width: 960px;
 }
 .u-nav a{
@@ -36,20 +17,21 @@ html{
 	background-color: #e8e8e8;
 	background-repeat: no-repeat;
 	background-position: left top;
+	behavior: url(/common/ie-css3.htc);
 }
 
 .u-topic{
-	margin: 30px auto 0;
-	width: 960px;
-	border: dashed 1px #d2d2d2;
-	border-width: 1px 0;
 	padding: 30px 0;
+	background-color: #404040;
+}
+.u-topic .wrap{
+	margin: auto;
+	width: 960px;
 }
 .u-topic li{
 	float: left;
-	margin: 8px;
+	margin: 10px;
 	width: 300px;
-	border: solid 1px #e8e8e8;
 	background-color: #fff;
 }
 .u-topic li .pic{
@@ -65,21 +47,14 @@ html{
 	height: 44px;
 	padding: 6px 12px;
 	line-height: 22px;
-	color: #888;
 	font-family: "Microsoft YaHei";
 }
 .u-topic li .note a{
-	color: #888;
+	color: #606060;
 	text-decoration: none;
 }
 .u-topic li .note a:hover{
-	color: #888;
+	color: #303030;
 }
 
-.u-foot{
-	margin: auto;
-	width: 960px;
-	line-height: 32px;
-	color: #aaa;
-	font-family: "Courier New", Courier, monospace;
-}
+
