--- a/code/index.css
+++ b/code/index.css
@@ -1,11 +1,8 @@
 @charset "utf-8";
-body{
-	background-color: #f4f4f4;
-}
 /* @index */
 .u-wrap{
 	margin: auto;
-	padding: 4px
+	padding: 20px 0;
 }
 .u-td{
 	float: left;
