--- a/music/index.css
+++ b/music/index.css
@@ -1,16 +1,12 @@
 @charset "utf-8";
-body{
+.kc-body{
+	padding-bottom: 30px;
 	background-color: #fff;
 }
 /* @player */
 .u-player{
-	position: fixed;
-	left: 0;
-	right: 0;
-	top: 0;
 	background-color: #f0f0f0;
 	border-bottom: solid 1px #e0e0e0;
-	z-index: 50;
 }
 .u-player .wrap{
 	margin: auto;
