--- a/trip/index.css
+++ b/trip/index.css
@@ -1,14 +1,12 @@
 @charset "utf-8";
-body{
-	background-color: #f4f4f4;
-}
 /* @index */
 .u-wrap{
 	margin: auto;
 	width: 960px;
+	padding: 30px 0;
 }
 .u-wrap .contain{
-	margin-top: 30px;
+	margin-bottom: 30px;
 }
 .u-wrap .date{
 	float: left;
@@ -56,7 +54,6 @@ body{
 }
 
 .u-page{
-	margin-top: 30px;
 	padding-left: 140px;
 }
 .u-page a{
