--- a/trip/p.css
+++ b/trip/p.css
@@ -2,66 +2,23 @@
 body{
 	background-color: #fff;
 }
-/* @u-head */
-.u-head{
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	background-color: #f0f0f0;
-	border-bottom: solid 1px #e0e0e0;
-}
-.u-head .wrap{
-	margin: auto;
-	width: 920px;
-	padding: 10px 20px;
-	font-size: 14px;
-	font-family: "Microsoft YaHei";
-}
-.u-head .back{
-	float: left;
-	padding: 0 18px;
-	height: 30px;
-	line-height: 30px;
-	background-color: #fff;
-	border: solid 1px #e4e4e4;
-	border-radius: 5px;
-	color: #a0a0a0;
-	text-decoration: none;
-	display: none;
-}
-.u-head .back:hover{
-	color: #ff8800;
-}
-.u-head .title{
-	float: left;
-	height: 32px;
-	line-height: 32px;
-	font-size: 16px;
-}
-.u-head .title em{
-	font-size: 12px;
-	color: #a0a0a0;
-	font-family: Verdana, Geneva, sans-serif;
-}
-.u-headtemp{
-	height: 53px;
-	overflow: hidden;
-}
-
-.kc-back .back{
-	display: block;
-}
-.kc-back .title{
-	float: right;
-}
-
+/* @wrap */
 .u-wrap{
 	margin: auto;
 	width: 920px;
-	padding: 30px 20px 0;
+	padding: 30px 20px;
+}
+.u-wrap h1{
+	font-family: "Microsoft YaHei";
+	font-size: 24px;
+}
+.u-wrap h1 em{
+	font-size: 14px;
+	color: #a0a0a0;
+	font-family: Verdana, Geneva, sans-serif;
 }
 .u-wrap .contain{
+	margin-top: 20px;
 	font-size: 14px;
 	font-family: "Microsoft YaHei";
 	line-height: 26px;
