--- a/wallpaper/index.css
+++ b/wallpaper/index.css
@@ -32,12 +32,13 @@
 	color: #404040;
 	text-decoration: none;
 }
-.u-list hr{
-	display: block;
+.u-list .space{
+	margin-bottom: 10px;
 	width: 100%;
-	height: 0;
-	border: 0;
+	height: 10px;
+	border-bottom: dashed 1px #d0d0d0;
 	overflow: hidden;
+	color: #fff;
 }
 
 /* @page */
