--- a/code/index.css
+++ b/code/index.css
@@ -1,44 +1,63 @@
 @charset "utf-8";
 /* @index */
-.u-wrap{
-	margin: auto;
-	padding: 20px 0;
-}
-.u-td{
-	float: left;
-	width: 228px;
-}
-.u-td .wrap{
-	padding: 4px;
-}
-.u-td .contain{
-	width: 200px;
-	border: solid 1px #eee;
-	padding: 9px 9px 8px;
-	background-color: #fff;
-}
-.u-td .pic img{
-	display: block;
-	width: 100%;
-}
-.u-td .title{
-	padding-top: 6px;
-	color: #606060;
+.kc-body{
+	padding: 30px 0;
 	font-family: "Microsoft YaHei";
 }
-
-.u-foot{
-	padding: 0 20px;
-	border-top: dashed 1px #d2d2d2;
-	line-height: 32px;
-	color: #aaa;
-	font-family: "Courier New", Courier, monospace;
-	font-size: 14px;
+.u-wrap{
+	margin: auto;
+	width: 920px;
+	padding: 20px;
+	background-color: #fff;
 }
-.u-foot a{
-	color: #aaa;
+.u-wrap h1{
+	margin-bottom: 10px;
+	font-size: 18px;
+	color: #404040;
+}
+.u-wrap .content{
+	font-size: 14px;
+	line-height: 28px;
+	color: #808080;
+}
+.u-wrap .content p{
+	text-indent: 2em;
+}
+.u-list{
+	margin: 10px auto 0;
+	width: 960px;
+}
+.u-list li{
+	float: left;
+	width: 220px;
+	padding: 10px;
+}
+.u-list h2{
+	font-size: 14px;
+	padding: 0 6px 5px;
+	border-bottom: solid 1px #ddd;
+	color: #303030;
+	font-family: "Courier New", Courier, monospace;
+}
+.u-list h2 a{
+	color: #08f;
 	text-decoration: none;
 }
-.u-foot a:hover{
-	color: #ff9900;
+.u-list h2 a:hover{
+	color: #f80;
+}
+.u-list .content{
+	border-top: solid 1px #fff;
+	color: #a0a0a0;
+	line-height: 24px;
+	padding: 4px 6px;
+}
+.u-list .ver{
+	color: #808080;
+}
+.u-list .space{
+	clear: both;
+	width: 100%;
+	height: 0;
+	overflow: hidden;
 }
