--- a/module/zebra-datepicker/css/zebra_datepicker.css
+++ b/module/zebra-datepicker/css/zebra_datepicker.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 /*
 
     Zebra_DatePicker: a lightweight jQuery date picker plugin
@@ -9,14 +10,14 @@
 */
 
 .Zebra_DatePicker *                          { margin: 0; padding: 0; color: #000 }
-.Zebra_DatePicker                            { position: absolute; background: #666; border: 3px solid #666; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: none; z-index: 100; font-family: Tahoma, Arial, Helvetica, sans-serif; font-size: 13px }
+.Zebra_DatePicker                            { position: absolute; background: #666; border: 3px solid #666; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; display: none; z-index: 100; font-family: Tahoma, Arial, Helvetica, sans-serif; font-size: 13px; line-height: 1; }
 
 /* = GLOBALS
 ----------------------------------------------------------------------------------------------------------------------*/
 .Zebra_DatePicker table                      { border-collapse: collapse; border-spacing: 0 }
 
 .Zebra_DatePicker td,
-.Zebra_DatePicker th                         { text-align: center; padding: 5px 0 }
+.Zebra_DatePicker th                         { text-align: center; padding: 6px 0 }
 
 .Zebra_DatePicker td                         { cursor: pointer }
 
